<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cmdset"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/dialogZeo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Numvalue" />

            <EditText
                android:id="@+id/cont1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="9999999"
                android:inputType="number"
                android:singleLine="true"
                android:text="88888"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step" />

            <EditText
                android:id="@+id/step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="0"
                android:inputType="number"
                android:singleLine="true"
                android:text="100"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Negative_count_mode"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/ComentEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                android:text="999"
                android:textSize="25sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/icon5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/icon6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/icon7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />


                <ImageView
                    android:id="@+id/icon9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/icon10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/icon11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="12sp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_delete" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <Button
                    android:id="@+id/dialogExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/Exit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left">

                <TextView
                    android:id="@+id/kankanla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/kankanla" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
